# Animal_Feeder

./: .gitignore  README.md  diagram.json  sdkconfig  sdkconfig.old  wokwi.toml
Docs/: Cat_Feeder.gsheet  Clone repository.docx  Crear una nueva Rama.docx  Código_para_acoplar.txt  Debugger configuration.docx  GIt restore old version.docx  Importante debug.txt  Nuevo16 (1).txt  Procedimiento.txt  secuencia.txt  template _for_h.txt  template_for_c.txt  ~$bugger configuration.docx  ~$t restore old version.docx
FTF_display/: easyio.h  font.h  ili9341.c  ili9341.h  img.c  loma40px.c  picture.h  simple_gui.c  simple_gui.h  spi_config.c  spi_config.h  spi_lcd.c  spi_lcd.h  thaifont-esp32.c  thaifont-esp32.h
RCT/ds3231/: ds3231.c  ds3231.h
RCT/i2cdev/: i2cdev.h
main/: CMakeLists.txt  main.c
main/Alarm_menu/: Alarm_menu.c  Alarm_menu.h
main/Button_Handler/: Button_Handler.c  Button_Handler.h
main/Main_Screen/: Main_Screen.c  Main_Screen.h
main/Pwm_motor/: Pwm_motor.c  Pwm_motor.h
