idf_component_register(SRCS "main.c" "C:/Repos/Animal_Feeder/RCT/i2cdev/i2cdev.c"
                            "C:/Repos/Animal_Feeder/RCT/ds3231/ds3231.c"
                            "C:/Repos/Animal_Feeder/main/Main_Screen/Main_Screen.c"                  
                    INCLUDE_DIRS "." "C:/Repos/Animal_Feeder/RCT/ds3231"
                    "C:/Repos/Animal_Feeder/RCT/i2cdev"
                    "C:/Repos/Animal_Feeder/RCT/esp_idf_lib_helpers"
                    "C:/Repos/Animal_Feeder/main/Main_Screen")
